# pyraxial

./: .gitignore  .travis.yml  LICENSE  LICENSE.md  Pipfile  README.md  dev_requirements.txt  index.html  pyproject.toml  pyraxial.html  pyraxial.py  requirements.txt  run-tests  run-tests-with-cov-and-mccabe  setup.cfg  testall
.bin/: run-tests
doc/: index.html
docs/: 404.html  index.html  pyraxial-readme.md  rect_lattice_proofs.md  rect_partitions_algorithm.md  sitemap.xml
docs/reference/pyraxial/: index.html
docs/search/: search_index.json
html/: annotated.html  classes.html  classpyraxial_1_1MetaRect-members.html  classpyraxial_1_1MetaRect.html  classpyraxial_1_1Rect-members.html  classpyraxial_1_1Rect.html  functions.html  functions_func.html  hierarchy.html
html/search/: all_1.js  all_3.js  all_5.js  all_6.js  classes_0.js  functions_0.js  functions_2.js  searchdata.js
reference/pyraxial/: index.html
search/: search_index.json
src/pyraxial/: __init__.py
src/tests/: test_pyraxial.py
tests/: test_pyraxial.py
