[project]
name = 'pyraxial'
version = '0.2.6-beta'
description = 'An algebraic take on axis-aligned rectangles.'
authors = [{ name = 'Mick Krippendorf', email = 'm.krippendorf@freenet.de' }]
dependencies = ["itree~=0.0"]
requires-python = '>=3.10'
dynamic = ['classifiers']
license = { text = 'MIT' }
readme = 'README.md'
keywords = ['bounding-box']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
homepage = 'https://pillmuncher.github.io/pyraxial'
documentation = 'https://pillmuncher.github.io/pyraxial'
repository = 'https://github.com/pillmuncher/pyraxial'

[build-system]
requires = ['pdm-pep517']
build-backend = 'pdm.pep517.api'

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
editor = []
test = []

[tool.pdm.scripts]
test = "pytest"

[tool.pytest.ini_options]
addopts = "--cov=pyraxial --cov-report=term-missing"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "mypy>=1.4.1",
    "hypothesis>=6.79.4",
]
editor = []
test = []
